# courier

./: .gitattributes  .gitignore  Dockerfile  INSTALLME  README  README.md
cone/: .gitignore  AUTHORS  ChangeLog  Makefile.am  changelog.pl  cone.spec.in  configure.ac  configure.in  courier-debuild.in  dbobj.config.in
cone/cone/: .gitignore  APPLICATION.PDF.filter.in  IMAGE.filter.in  Makefile.am  acl.C  acl.H  addressbook.C  addressbook.H  addressbookinterface.C  addressbookinterface.H  addressbookinterfaceldap.C  addressbookinterfaceldap.H  addressbookinterfacemail.C  addressbookinterfacemail.H  cache.H  certificates.C  certificates.H  colors.C  colors.H  colors.txt  colors_inc.h  cone.C  cone.dist.in  cone.dist.in.git  cone.sh.in  cone.xsl  configscreen.C  configscreen.H  configure.ac  ctrlchandler.C  ctrlchandler.H  cursesaddresslist.C  cursesaddresslist.H  cursesattachmentdisplay.C  cursesattachmentdisplay.H  cursesedit.C  cursesedit.H  curseseditmessage.C  curseseditmessage.H  curseshierarchy.C  (+113 more)
cone/curses/: .gitignore  Makefile.am  configure.ac  configure.in  curses.C  cursesbutton.C  cursesbutton.H  curseschoicebutton.C  curseschoicebutton.H  cursescontainer.C  cursescontainer.H  cursesdialog.C  cursesdialog.H  cursesfield.C  cursesfield.H  cursesfilereq.C  cursesfilereq.H  cursesflowedline.H  curseskeyhandler.C  curseskeyhandler.H  curseslabel.C  curseslabel.H  cursesmainscreen.C  cursesmainscreen.H  cursesmoronize.C  cursesmoronize.H  cursesmultilinelabel.C  cursesmultilinelabel.H  cursesobject.C  cursesobject.H  cursesscreen.C  cursesscreen.H  cursesstatusbar.C  cursesstatusbar.H  cursestitlebar.C  cursestitlebar.H  cursesvscroll.C  cursesvscroll.H  mycurses.H  timer.C  (+3 more)
cone/libmail/: .gitignore  Makefile.am  addmessage.C  addmessage.H  addmessageimport.C  addmessageremoveattachments.C  addressbook.C  addressbook.H  addressbookadd.C  addressbookadd.H  addressbookget.C  addressbookget.H  addressbookopen.C  addressbookopen.H  addressbooksearch.C  addressbooksearch.H  attachments.C  attachments.H  autodecoder.C  autodecoder.H  autodeps.C  base64.C  base64.H  configure.ac  configure.in  copymessage.C  copymessage.H  decoder.C  decoder.H  driver.C  driver.H  envelope.C  envelope.H  expungelist.C  expungelist.H  fd.C  fd.H  fdtls.C  fdtls.H  file.C  (+178 more)
courier/: .gitignore  AUTHORS  BENCHMARKS  ChangeLog  ChangeLog.2001  Makefile.am  NEWS.html  README  TODO  automake.fix  configure.ac  configure.in  courier-debuild.in  courier.lpspec.in  courier.service.in  courier.spec.in  courier.sysvinit.in  dbobj.config.in
courier-analog/: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  configure.in  courier-analog.in  courier-analog.sgml  courier-analog.spec.in  courier-debuild.in
courier-authlib/: .gitignore  AUTHORS  ChangeLog  INSTALL.html  Makefile.am  NEWS.html  README.authdebug.html.in  README.authmysql.html  README.authmysql.myownquery  README.authpostgres.html  README.authsqlite.html  README.html  README.ldap  README_authlib.sgml  auth.h  auth_enumerate.sgml  auth_generic.sgml  auth_getoption.sgml  auth_getuserinfo.sgml  auth_login.sgml  auth_meta.sgml  auth_mkhomedir.sgml  auth_passwd.sgml  auth_sasl.sgml  authcallback.sgml  authconfigfile.cpp  authconfigfile.h  authcustom.c  authcustom.h  authdaemon.c  authdaemond.c  authdaemond.in  authdaemondcpp.cpp  authdaemonlib.c  authdaemonrc.in  authdaemonrc.in.git  authdaemontest.c  authenumerate.c  authgetconfig.c  authinfo.c  (+106 more)
courier-authlib/liblog/: .gitignore  Makefile.am  configure.ac  configure.in  courierlogger.sgml  logger.c
courier-authlib/userdb/: .gitignore  Makefile.am  configure.ac  configure.in  makeuserdb.in  makeuserdb.sgml  pw2userdb.in  userdb.c  userdb.h  userdb.pl.in  userdb.sgml  userdb2.c  userdbmkpw.c  userdbpw.c  userdbpw.sgml
courier-imap/: .gitignore  AUTHORS  ChangeLog  INSTALL.html.in  Makefile.am  NEWS.html  README  README.cygwin  authconfig.in  configure.ac  courier-debuild.in  courier-imap.lpspec.in  courier-imap.spec.in  dbobj.config.in  dbobj.h.in  imap-format.xsl  imap.xml  imap.xsl  imapd-ssl.rc.in  imapd.rc.in  makeimapaccess.in  pop3d-ssl.rc.in  pop3d.rc.in  prep.xsl
courier-sox/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  cidr.h  configure.ac  connectfunc.h  courier-debuild.in  courier-sox.lpspec.in  courier-sox.service.in  courier-sox.spec.in  courier-sox.sysvinit.in  mkbl4.in  mkbl4.sgml  parseconfigfile.h  printaddr.h  sockd.c  sockd.rc.in  sockd.sgml  socks.h.in  socks.sgml  socksify.in  socksify.sgml  socksrc.sgml  sockswrap.c  sox.c  stubfuncs.h  system.in  testbind.c  testcidr.c  testcidr.sh.in  testconnect.c  toipv4.h
courier/afx/: .gitignore  ChangeLog  Makefile.am  afx.h  afxpipe.C  configure.ac  configure.in  testafxpipe.C
courier/courier/: .gitignore  Makefile.am  adminrequest.tmpl  aliascombine.C  aliascreate.C  aliases.config  aliasexp.C  aliasexp2.C  aliaslookup.C  bofh.c  bofh.h  cancelmsg.c  cddelinfo.C  cddelinfo.h  cddlvrhost.C  cddlvrhost.h  cddrvinfo.C  cddrvinfo.h  cdfilters.C  cdfilters.h  cdmsgq.C  cdmsgq.h  cdmsgq2.C  cdmsgq3.C  cdpendelinfo.C  cdpendelinfo.h  cmlm.C  (+149 more)
maildrop/: .gitignore  AUTHORS  COPYING.GPL  ChangeLog  INSTALL.html.in  Makefile.am  NEWS  README.CVS  README.dovecotauth  README.html.in  README.postfix  UPGRADE.html  configure.ac  courier-debuild.in  dbobj.config.in  dbobj.h.in  documentation.html  download.html  index.html  links.html  maildrop.lpspec.in  maildrop.spec.in
sqwebmail/: .gitignore  AUTHORS  ChangeLog  INSTALL.html  Makefile.am  README.git  README.html  README.logindomainlist.html  README.pam  configure.ac  configure.in  courier-debuild.in  pgpkeys.txt  sqwebmail.lpspec.in  sqwebmail.spec.in  sqwebmaild.rc.in
sysconftool/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  configure.in  courier-debuild.in  docbook  index.html  sysconftool.in  sysconftool.m4.in  sysconftool.spec.in  sysconftool1.sgml  sysconftool7.sgml  sysconftoolcheck.in  sysconftoolcheck.sgml  sysconftoolize.am  sysconftoolize.pl.in  testsuite  testsuite.txt
(+717 files in other folders)
